manifests/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-tracker-backend
  namespace: expense-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-tracker-backend
  template:
    metadata:
      labels:
        app: expense-tracker-backend
    spec:
      containers:
        - name: expense-tracker-backend
          image: pratikrshah/expense_tracker_backend:v0.1
          ports:
            - containerPort: 8000
