manifests/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-tracker-backend-service
  namespace: expense-tracker
spec:
  selector:
    app: expense-tracker-backend
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
